--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "owl.carousel": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-owl-carousel": "^2.3.3",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3"
   },
